# raisinit

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: io.rs  lib.rs  main.rs  poweroff.rs  reboot.rs  respawn.rs
