[package]
name = "raisinit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.8"
syscalls = { version = "0.6.13", default-features = false }
raisinlib = { git = "https://github.com/SED4906/raisinlib" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "init"
path = "src/main.rs"

[[bin]]
name = "respawn"
path = "src/respawn.rs"

[[bin]]
name = "poweroff"
path = "src/poweroff.rs"

[[bin]]
name = "reboot"
path = "src/reboot.rs"